--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <select id="harmony">
             <option value="analogous">Analogous</option>
             <option value="monochromatic">Monochromatic</option>
-            <option value="Triad">Traid</option>
+            <option value="triad">Traid</option>
             <option value="complementary">Complementary</option>
             <option value="compound">Compound</option>
             <option value="shades">Shades</option>
